2012-06-06  6.7.7-7 Glenn Randers-Pehrson <glennrp@image...>
  * Disabled a new palette-index test in libpng-1.5.10.  It does not play
    nicely with the MNG encoder when a global palette is used.
  * Display the PNG colortype as a string in "identify -verbose" output.

2012-06-06  6.7.7-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Small refactor of Average Interpolators (save some multiplies)

2012-06-05  6.7.7-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-6, SVN revision 8164.

2012-06-05  6.7.7-6 Anthony Thyssen <A.Thyssen@griffith...>
  * Renamed 'Bicubic' interpolation the more precise definition 'Catrom'
    Old name kept (but hidden) for backward compatibility in bit CLI and
    API interfaces.

2012-06-01  6.7.7-6 Cristy  <quetzlzacatenango@image...>
  * The -set colorspace option sets the colorspace, it does not transform it.
  * Assume grayscale images in the GIF format are linear.
  * Add Nicolas Robidoux's bicubic interpolation method (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21118).
    This replaces the old 'bicubic' which was very extreme 'cardinal' cubic.
  * Add DuPont & XFIG copyright to NOTICE.
  * sRGB.icc has an unfriendly license, remove it.
  * MinGW does not define KEY_WOW64_32KEY (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21155).
  * -evaluate log properly handles negative pixel values.
  * The display program displays the ImageMagick logo on EOF.

2012-05-31  6.7.7-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-5, SVN revision 8099.

2012-05-31  6.7.7-5 Cristy  <quetzlzacatenango@image...>
  * Set terminal character for GIF comment.

2012-05-30  6.7.7-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-4, SVN revision 8096.

2012-05-30  6.7.7-4 Cristy  <quetzlzacatenango@image...>
  * 'convert 1-bit.tif -rotate 90 ...' returns a 1-bit TIFF image as expected.

2012-05-29  6.7.7-4 Glenn Randers-Pehrson <glennrp@image...>